kubernetes/backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  namespace: kittygram
spec:
  selector:
    matchLabels:
      app: backend
  replicas: 1
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
      - name: backend
        image: kryssperer/kittygram_final-backend
        resources:
          limits:
            memory: "256Mi"
            cpu: "250m"
        ports:
        - containerPort: 9000
        volumeMounts:
          - mountPath: /app/media/
            name: media
          - mountPath: /backend_static
            name: backend-static
        ReadinessProbe:
          periodSeconds: 10
          tcpSocket:
            port: 9000
        livenessProbe:
          periodSeconds: 10
          tcpSocket:
            port: 9000
      volumes:
        - name: media
          persistentVolumeClaim:
            claimName: media-pvc
        - name: backend-static
          persistentVolumeClaim:
            claimName: backend-static-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: backend
  namespace: kittygram
spec:
  selector:
    app: backend
  type: NodePort
  ports:
  - port: 9000
    targetPort: 9000
