kubernetes/nginx.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx
  namespace: kittygram
spec:
  selector:
    matchLabels:
      app: nginx
  replicas: 1
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - name: nginx
        image: kryssperer/kittygram_final-nginx
        resources:
          limits:
            memory: "128Mi"
            cpu: "125m"
        ports:
        - containerPort: 80
        - containerPort: 443
        volumeMounts:
          - mountPath: /media/
            name: media
        ReadinessProbe:
          periodSeconds: 10
          httpGet: 
            path: /index.html
            port: 80
        livenessProbe:
          periodSeconds: 10
          httpGet: 
            path: /index.html
            port: 80
      volumes:
        - name: media
          persistentVolumeClaim:
            claimName: media-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: nginx
  namespace: kittygram
spec:
  selector:
    app: nginx
  type: NodePort
  ports:
  - port: 80
    name: http
    targetPort: 80
  - port: 443
    name: https
    targetPort: 443
