kubernetes/postgres.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres
  namespace: kittygram
spec:
  selector:
    matchLabels:
      app: postgres
  template:
    metadata:
      labels:
        app: postgres
    spec:
      containers:
      - name: myapp
        image: postgres:13-bullseye
        resources:
          limits:
            memory: "128Mi"
            cpu: "125m"
        ports:
        - containerPort: 5432
        volumeMounts:
          - mountPath: /var/lib/postgresql/data/
            name: postgres-data
        readinessProbe:
          periodSeconds: 10
          tcpSocket:
            port: 5432
        livenessProbe:
          periodSeconds: 10
          tcpSocket:
            port: 5432
      volumes:
        - name: postgres-data
          persistentVolumeClaim:
            claimName: postgres-data-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: postgres
  namespace: kittygram
spec:
  selector:
    app: postgres
  ports:
  - port: 5432
    targetPort: 5432
