kubernetes/nginx-ingress.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kittygram
  namespace: kittygram
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-prod  # This helps our ClusterIssuer identify this Ingress resource.
  labels:
    name: kittygram
spec:
  tls:  # This describes the TLS configuration for our site.
  - hosts:
    - kittygram.kiiashkin.net
    secretName: kittygram-tls
  rules:
  - host: kittygram.kiiashkin.net
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: nginx
            port: 
              number: 80
